--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
   font-size: 13px;
 }
 
+.btn-act {
+  padding: 1px;
+}
+
 .table-responsive {
   margin: 30px 0;
 }
@@ -67,7 +71,7 @@ table.table tr td {
 }
 
 table.table tr th:last-child {
-  width: 100px;
+  width: 150px;
 }
 
 table.table-striped tbody tr:nth-of-type(odd) {
